[package]
name = "proc-listener"
version = "0.1.0"
authors = ["Matt Coffin <mcoffin13@gmail.com>"]
edition = "2018"

[dependencies]
tokio = "*"
tokio-codec = "*"
tokio-timer = "*"
futures = "*"
bytes = "*"
byteorder = "*"
libc = "*"

[dependencies.netlink-packet]
version = "^0.1.0"
features = ["rtnetlink"]

[dependencies.netlink-proto]
version = "^0.1.1"
features = ["rtnetlink"]

[dependencies.netlink-sys]
version = "^0.1.0"
features = ["tokio_support", "mio_support"]
